--- a/static/css/main.css
+++ b/static/css/main.css
@@ -57,10 +57,10 @@ a:hover {
 main {
 	background-color: #efefef;
 }
-.main-area {
+/*.main-area {
     padding-top: 9.55rem;
     padding-left: 7.7rem;
-}
+}*/
 .tagline {
     font-family: akzidenz-grotesk-condensed,akzidenz-grotesk,helvetica,sans-serif;
 }
